[added] my shitty 90's website to sub domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,7 @@
-
-# user  nginx;
-# worker_processes  1;
-
-# error_log  /var/log/nginx/error.log warn;
-# pid        /var/run/nginx.pid;
-# events {
-#     worker_connections  1024;
-# }
-# http {
-#     include       /etc/nginx/mime.types;
-#     default_type  application/octet-stream;
-#     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-#                       '$status $body_bytes_sent "$http_referer" '
-#                       '"$http_user_agent" "$http_x_forwarded_for"';
-#     access_log  /var/log/nginx/access.log  main;
-#     sendfile        on;
-#     #tcp_nopush     on;
-#     keepalive_timeout  65;
-#     gzip  on;
-#     include /etc/nginx/conf.d/*.conf;
-# }
-
-
+# by oran collins
+# github.com/wisehackermonkey
+# oranbusiness@gmail.com
+# 20210504
 
 worker_processes  1;
 events {
@@ -173,6 +153,24 @@ http {
         server_tokens off;
         location / {
             proxy_pass "http://localhost:7788/";
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+        }     
+       try_files $uri $uri/ /not_found;
+       location /not_found {
+            # ascii gandalf https://ascii.co.uk/art/gandalf
+            return 404 "    ,                      _,-\n   (\\                  _,-\',\'\n    \\\\              ,-\"  ,\'\n     \\\\           ,\'   ,\'\n      \\\\        _:.----__.-.\"-._,-._\n       \\\\    .-\".:--`:::::.:.:\'  )  `-.\n        \\\\   `. ::L .::::::\'`-._  (  ) :\n         \\\\    \":::::::\'  `-.   `-_ ) ,\'\n          \\\\.._/_`:::,\' `.     .  `-:\n          :\" _   \"\\\"\" `-_    .    `  `.\n           \"\\\\\"\":--\\     `-.__ ` .     `.\n             \\\\\'::  \\    _-\"__`--.__ `  . `.     _,--..-\n              \\\\ ::  \\_-\":)(        \"\"-._ ` `.-\'\'\n               \\\\`:`-\":::/ \\\\ .   .      `-.  :\n               :\\\\:::::::\'  \\\\     `    .   `. :\n                :\\\\:\':\':\'  . \\\\           `,  : :\n                : \\\\     .    \\\\      .       `. :       ,-\n               __`:\\\\      .   \\\\ .   `  ,\'    ,: :   ,-\'\n        _,---\"\"  :  \\\\ \'        \\\\  .          :-\"  ,\'\n    ,-\"\"        :    \\\\:  .  :   \\\\  `  \'     ,\'   /\n   \'            :  :  \\       .   \\\\   .   _,\'  ,-\'\n               :  .   \'       :   :`   `,-\' ,--\'\n                :     :   :      ,\'-._,\' ,-\'\n                _:     :        :8:  ,--\'\n               :dd`-._,\'-._.__-\"\"\' ,\'\n                             ,----\'\n                      _.----\'\n              __..--\"\"\n            \"\"\nYO, you\'ve found the end of the road, no content beyond this point!\n";
+        }
+    }
+
+    # my Remash server
+    server {
+        listen 80;
+        server_name 1990.oran.business;
+        server_tokens off;
+        location / {
+            proxy_pass "http://localhost:1990/";
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
