[add] funny custom header

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,8 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
+            add_header  Servers-are-cool oran-was-here;
+
         }
         
         # this is to enable page popup when server has not found any content
